# euhadra

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: canary-integration.md  evaluation.md  korean-asr-alternatives.md  model-licenses.md  spec.md
docs/benchmarks/: ci_baseline.json  ci_baseline_layers.json
examples/: bench_faster_whisper_ko.rs  bench_whisper_onnx_ko.rs  bench_whisper_rs_ko.rs  dump_canary_rust_tensors.rs  eval_l1_fast.rs  eval_l1_smoke.rs  eval_l2.rs  eval_l3.rs
models/: euhadra.als
patches/: text-processing-rs-es-sentence.message.txt  text-processing-rs-es-sentence.patch  text-processing-rs-ko-itn.message.txt  text-processing-rs-ko-itn.patch
scripts/: build_en_filler_annotations.py  build_en_phoneme_correction_annotations.py  build_en_self_correction_annotations.py  build_es_filler_annotations.py  build_es_self_correction_annotations.py  build_ja_filler_annotations.py  build_ko_filler_annotations.py  build_ko_self_correction_annotations.py  build_l3_natural_fixtures.py  build_zh_filler_annotations.py  build_zh_self_correction_annotations.py  compare_canary_tensors.py  download_fleurs_subset.py  download_l2_data.py  download_l2_data.sh  download_l3_data.sh  dump_canary_python_tensors.py  filler_filter.py  setup_canary.sh  setup_canary_es.sh  setup_paraformer_zh.sh  setup_parakeet_en.sh  setup_parakeet_ja.sh  setup_sensevoice.sh  setup_whisper.sh  setup_whisper_onnx_turbo.sh
src/: emitters.rs  faster_whisper.rs  filter.rs  lib.rs  main.rs  mic.rs  mock.rs  onnx_processing.rs  paragraph.rs  parakeet.rs  phoneme.rs  pipeline.rs  prelude.rs  processor.rs  router.rs  state.rs  traits.rs  types.rs  whisper_local.rs  whisper_onnx.rs  whisper_rs.rs
src/canary/: adapter.rs  decoder.rs  encoder.rs  factory.rs  frontend.rs  mod.rs  profiling.rs  vocab.rs
src/eval/: annotations.rs  baseline.rs  f1.rs  fixtures.rs  latency.rs  metrics.rs  mod.rs
src/paraformer/: adapter.rs  factory.rs  fbank.rs  frontend.rs  mod.rs  vocab.rs
src/sensevoice/: adapter.rs  factory.rs  metadata.rs  mod.rs  vocab.rs
src/whisper_onnx/: adapter.rs  mel.rs  mod.rs  tokenizer.rs
tests/: backpressure.rs  cancellation.rs  fallback.rs  pipeline_e2e.rs  router_onnx_factories.rs  router_sensevoice.rs  router_whisper_local.rs
tests/common/: mod.rs
tests/evaluation/annotations/: en_filler.jsonl  en_phoneme_correction.jsonl  en_phoneme_correction_base_dict.json  en_phoneme_correction_dict.json  en_self_correction.jsonl  es_self_correction.jsonl  guidelines.md  ja_filler.jsonl  ja_self_correction.jsonl  ko_filler.jsonl  ko_self_correction.jsonl  zh_filler.jsonl  zh_self_correction.jsonl
tests/evaluation/fixtures-natural/: en.jsonl  (+4 more)
(+5 files in other folders)
