[package]
name = "euhadra"
version = "0.1.0"
edition = "2021"
description = "A programmable voice input framework — ASR, LLM refinement, and OS integration as composable adapters"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
arboard = "3"
cpal = "0.15"

# ONNX inference (opt-in)
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.17", optional = true }
tokenizers = { version = "0.21", optional = true }
# parakeet-rs is pinned to penta2himajin's fork @ feature-size-injection
# until upstream exposes a configurable mel feature_size for Hybrid
# TDT-CTC models such as nvidia/parakeet-tdt_ctc-0.6b-ja (which is
# trained with 80 mels, not the v2/v3 default of 128). The fork's
# patch is non-breaking — `from_pretrained` keeps the 128-mel default;
# we only call the new `from_pretrained_with_feature_size` for ja.
parakeet-rs = { git = "https://github.com/penta2himajin/parakeet-rs", branch = "feature-size-injection", optional = true }

[features]
default = []
onnx = ["dep:ort", "dep:ndarray", "dep:tokenizers", "dep:parakeet-rs"]

[[bin]]
name = "euhadra"
path = "src/main.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
async-trait = "0.1"
# Used by examples/eval_l2.rs for FFT-based RIR convolution. Dev-only
# so default cargo build stays lean.
rustfft = "6"

